srcs/phpmyadmin.yml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 5000
  selector:
    app: phpmyadmin
    tier: frontend
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpmyadmin
        tier: frontend
    spec:
      containers:
      - image: phpmyadmin
        imagePullPolicy : Never
        name: phpmyadmin
        ports:
        - containerPort: 5000
          name: phpmyadmin
